--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express-jwt": "^8.4.1",
     "joi": "^17.4.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql": "^2.18.1"
+    "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
+    "uniqid": "^5.4.0"
   }
 }
